<resources>
    <string name="app_name">G-Bro</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="cancel">취소</string>
    <string name="warning">경고</string>
    <string name="save">저장</string>
    <string name="write">글쓰기</string>
    <string name="setting">설정</string>
    <string name="profile">프로필</string>
    <string name="loading">로딩중</string>
    <string name="none">없음</string>
    <string name="error">에러가 발생했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="backpressed">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="input">입력</string>

    <string name="login_invalid">가천대학교 구성원만 사용할 수 있습니다.</string>
    <string name="login_error">로그인에 실패했습니다.</string>
    <string name="login_new">신규 가입을 환영합니다! </string>
    <string name="login_success">로그인에 성공했습니다.</string>

    <string name="search_hint">게시물명 입력</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_registerdate">가입일 :</string>

    <string name="setting_info">정보</string>
    <string name="setting_mypost">내가 작성한 게시물</string>
    <string name="setting_mypost_summary">본인이 작성한 게시물을 확인합니다.</string>
    <string name="setting_changeinfo">정보 변경</string>
    <string name="setting_changeinfo_summary">프로필 사진 및 닉네임을 변경할 수 있습니다.</string>
    <string name="setting_changeinfo_msg">변경할 닉네임을 입력해주세요.</string>
    <string name="setting_changeinfo_nickname">닉네임 변경</string>
    <string name="setting_changeinfo_summary_nickname"></string>
    <string name="change_nickname_success">닉네임 변경이 완료되었습니다.</string>
    <string name="change_nickname_error">닉네임 변경에 실패하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="setting_changeinfo_image">사진 변경</string>
    <string name="setting_changeinfo_summary_image"></string>
    <string name="change_image_success">사진 변경에 성공하였습니다.</string>
    <string name="change_image_error">사진 변경에 실패하였습니다. 닉네임 변경에 실패하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_logout_msg">정말로 로그아웃하시겠습니까? 다시 이용하시려면 로그인 하셔야 합니다.\n로그아웃 후 로그인 화면으로 돌아갑니다.</string>
    <string name="setting_withdraw">회원 탈퇴</string>
    <string name="setting_withdraw_msg">정말로 회원을 탈퇴하시겠습니까? 모든 정보는 복구할 수 없으며, 탈퇴가 완료되면 로그인 화면으로 돌아갑니다.</string>

    <string name="setting_noti">알림</string>
    <string name="setting_keywordnoti">키워드 알림</string>
    <string name="setting_keywordnoti_summary">지정한 키워드가 있는 게시물이 등록되면 알림을 받습니다.</string>
    <string name="setting_notikeyword">키워드 설정</string>
    <string name="setting_nearbyonoff">주변 분실물 알림</string>
    <string name="setting_nearbyonoff_summary">가까운 위치에 분실물이 있으면 알림을 받습니다.</string>
    <string name="setting_nearby_permission">해당 기능을 사용하기 위해서는 위치 관련 권한이 필요합니다.</string>
    <string name="setting_nearby_bgpermission">서비스에서 위치를 확인할 수 있도록 \'항상 허용\'을 선택하여 주세요!</string>
    <string name="setting_nearby_permission_denied">위치 권한이 거부되어 사용할 수 없습니다. 설정에서 위치 권한을 변경해주세요.</string>

    <string name="post_title">제목</string>
    <string name="post_date">날짜</string>
    <string name="post_time">시각</string>
    <string name="post_type">게시글 종류</string>
    <string name="post_location">장소</string>
    <string name="post_path">선택한 경로가 표시됩니다.</string>
    <string name="post_itemtype">물건 종류</string>
    <string name="post_path_selection">경로 선택</string>
    <string name="post_path_selection_done">완료</string>
    <string name="post_photo">관련 사진</string>
    <string name="post_content">내용을 입력하세요.</string>
    <string name="post_cancel_dialog_msg">취소하면 작성한 모든 정보가 삭제됩니다.\n글 작성을 정말 취소하시겠습니까?</string>
    <string name="post_remove_dialog_msg">게시물이 영원히 삭제됩니다.\n게시물을 정말 삭제하시겠습니까?</string>
    <string name="post_futureerror">미래의 일은 작성할 수 없습니다. 미래에 잃어버리지 않도록 조심하세요!</string>
    <string name="post_empty">모든 내용을 다 입력해주세요!</string>
    <string name="post_nophoto">하나 이상의 사진을 등록해야 합니다!</string>
    <string name="post_deletephoto_msg">정말 이 사진을 삭제하시겠습니까?</string>
    <string name="post_remove">삭제</string>
    <string name="post_remove_success">게시물이 정상적으로 삭제되었습니다.</string>
    <string name="post_remove_fail">게시물 삭제에 실패하였습니다.</string>
    <string name="post_cantmodifyphoto">사진은 수정할 수 없습니다.</string>
    <string name="post_success">성공적으로 업로드 되었습니다.</string>

    <string name="postcontent_chat">CHAT</string>
    <string name="postcontent_modify">수정</string>

    <string name="chatlist_title">채팅</string>

    <string name="Info_building_name"> 건물명 : %s</string>
    <string name="Info_lost_cnt">분실물 : %d 개</string>
    <string name="Info_get_cnt">습득물 : %d 개</string>

    <string name="localnoti_foreground_title">G-Bro 알림 작동중</string>
    <string name="localnoti_foreground_msg">알림 서비스가 작동중입니다! 여기를 누르시면 작동 알림을 끄실 수 있습니다.</string>

    <string name="keywordnoti_title">키워드 알림</string>
    <string name="keywordnoti_msg">%s 키워드가 있는 게시물이 등록되었습니다!</string>

    <string name="nearbynoti_title">근처 알림</string>
    <string name="nearbynoti_msg">%s에 %d개의 분실물이 있습니다!</string>
</resources>